string trim resolve #17

--- a/libs/to-mark/demo/demo.html
+++ b/libs/to-mark/demo/demo.html
@@ -9,7 +9,7 @@
     <body>
         <textarea id="inputHtml" rows="20" cols="100"></textarea><br />
         <button type="button" id="button">Convert!!</button>
-        <pre id='preview' style="width:300px"></pre>
+        <pre id='preview' style="width:600px;white-space: pre-wrap;"></pre>
         <script>
             var textArea = document.getElementById('inputHtml'),
                 preview = document.getElementById('preview'),
