--- a/libs/to-mark/demo/demo2.html
+++ b/libs/to-mark/demo/demo2.html
@@ -43,7 +43,7 @@
                     </ol>
                 </li>
             </ul>
-            <p><strong>My Name</strong> is <em>toMark</em><br /><img src="https://www.google.co.kr/images/srpr/logo11w.png" alt="google logo" /><a href="http://google.com">to google</a><br />this is <code>code</code></p>
+            <div><p><strong>My Name</strong> is <em>toMark</em><br /><img src="https://www.google.co.kr/images/srpr/logo11w.png" alt="google logo" /><a href="http://google.com">to google</a><br />this is <code>code</code></p></div>
             <blockquote>
                 <ul>
                     <li>list in blockquote</li><li>list in blockquote2</li>
@@ -56,9 +56,9 @@
 
             <pre><code>code block is here<br />im code code <br /></code></pre>
 
-            <p>Nulla metus metus, &nbsp;&nbsp;ullamcorper <code>vel,</code> tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit.<br />Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices. Suspendisse in justo eu magna luctus suscipit. Sed lectus.</p>
+            <p>Nulla metus metus, &nbsp;&nbsp;ullamcorper <code>vel,</code> tincidunt sed, euismod in, nibh. <strong>Quisque</strong> volutpat condimentum velit.<br /><em>Class</em> aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices. Suspendisse in justo eu magna luctus suscipit. Sed lectus.</p>
         </div>
-        <pre id='preview' style='margin-top:10px;border-top:3px solid #f00'></pre>
+        <pre id='preview' style='margin-top:11px;border-top:3px solid #f00'></pre>
         <script>
             document.getElementById('preview').innerText = toMark(document.getElementById('myHtml'));
         </script>
