--- a/libs/to-mark/demo/demo2.html
+++ b/libs/to-mark/demo/demo2.html
@@ -30,7 +30,7 @@
             <h3>HELLO</h3>
             <h4>HELLO</h4>
             <h5>HELLO</h5>
-            <h6>HELLO</h6>
+            <h6>HELLO <em>word</em></h6>
             <hr />
             <ul>
                 <li>list1</li>
@@ -43,20 +43,45 @@
                     </ol>
                 </li>
             </ul>
-            <div><p><strong>My Name</strong> is <em>toMark</em><br /><img src="https://www.google.co.kr/images/srpr/logo11w.png" alt="google logo" /><a href="http://google.com">to google</a><br />this is <code>code</code></p></div>
+            <div><p><strong>My Name</strong> is <em>toMark</em><br />and image <img src="https://www.google.co.kr/images/srpr/logo11w.png" alt="google logo" /> and link <a href="http://google.com">to google</a><br />this is <code>code</code></p></div>
             <blockquote>
                 <ul>
-                    <li>list in blockquote</li><li>list in blockquote2</li>
+                    <li>list in blockquote</li>
+                    <li>list in blockquote2</li>
                 </ul>
             </blockquote>
 
             <blockquote>
-                <blockquote>blockquote in blockquote</blockquote>
+                <blockquote>blockquote in blockquote<br />and returned in blockquote</blockquote>
+                content!!!
             </blockquote>
 
             <pre><code>code block is here<br />im code code <br /></code></pre>
+            <p>line break comes next this sentence<br />right?</p>
 
             <p>Nulla metus metus, &nbsp;&nbsp;ullamcorper <code>vel,</code> tincidunt sed, euismod in, nibh. <strong>Quisque</strong> volutpat condimentum velit.<br /><em>Class</em> aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices. Suspendisse in justo eu magna luctus suscipit. Sed lectus.</p>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th align="left">Left Align Head</th>
+                        <th align="center">Center Align Head</th>
+                        <th align="right">Right Align Head</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>data</td>
+                        <td>data</td>
+                        <td>data</td>
+                    </tr>
+                    <tr>
+                        <td>data</td>
+                        <td>data</td>
+                        <td>data</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
         <pre id='preview' style='margin-top:11px;border-top:3px solid #f00'></pre>
         <script>
