--- a/libs/to-mark/demo/demo2.html
+++ b/libs/to-mark/demo/demo2.html
@@ -21,6 +21,9 @@
                 color: #4d4e53;
                 text-shadow: none;
             }
+            pre br {
+                display: block;
+            }
         </style>
     </head>
     <body>
@@ -56,7 +59,7 @@
                 content!!!
             </blockquote>
 
-            <pre><code>code block is here<br />im code code <br /></code></pre>
+            <pre><code data-language="javascript">function test() { <br />    var i = 123; <br />    return i; <br />}</code></pre>
             <p>line break comes next this sentence<br />right?</p>
 
             <p>Nulla metus metus, &nbsp;&nbsp;ullamcorper <code>vel,</code> tincidunt sed, euismod in, nibh. <strong>Quisque</strong> volutpat condimentum velit.<br /><em>Class</em> aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices. Suspendisse in justo eu magna luctus suscipit. Sed lectus.</p>
@@ -83,7 +86,7 @@
                 </tbody>
             </table>
         </div>
-        <pre id='preview' style='margin-top:11px;border-top:3px solid #f00;white-space:nowrap'></pre>
+        <pre id='preview' style='margin-top:11px;border-top:3px solid #f00;'></pre>
         <script>
             document.getElementById('preview').innerText = toMark(document.getElementById('myHtml'));
         </script>
