some demo code fixed

--- a/libs/to-mark/demo/demo2.html
+++ b/libs/to-mark/demo/demo2.html
@@ -74,12 +74,12 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>data</td>
+                        <td><em>data</em></td>
                         <td>data</td>
                         <td>data</td>
                     </tr>
                     <tr>
-                        <td>data</td>
+                        <td><del>data</del></td>
                         <td>data</td>
                         <td>data</td>
                     </tr>
