--- a/libs/to-mark/demo/demo2.html
+++ b/libs/to-mark/demo/demo2.html
@@ -86,7 +86,7 @@
                 </tbody>
             </table>
         </div>
-        <pre id='preview' style='margin-top:11px;border-top:3px solid #f00;'></pre>
+        <pre id='preview' style='display:block;margin-top:11px;border-top:3px solid #f00;white-space:pre;'></pre>
         <script>
             document.getElementById('preview').innerText = toMark(document.getElementById('myHtml'));
         </script>
