--- a/plugins/table-merged-cell/demo/editor.html
+++ b/plugins/table-merged-cell/demo/editor.html
@@ -26,7 +26,7 @@
     <!-- Plugin -->
     <script src="../dist/cdn/toastui-editor-plugin-table-merged-cell.js"></script>
     <script class="code-js">
-      var content = ['| @cols=2:merged |', '| --- | --- |', '| table | table |'].join('\n');
+      var content = ['| @cols=2:merged | |', '| --- | --- |', '| table | table2 |'].join('\n');
 
       var Editor = toastui.Editor;
       var tableMergedCellPlugin = Editor.plugin.tableMergedCell;
@@ -35,7 +35,7 @@
         el: document.querySelector('#editor'),
         previewStyle: 'vertical',
         height: '500px',
-        initialEditType: 'markdown',
+        initialEditType: 'wysiwyg',
         initialValue: content,
         plugins: [tableMergedCellPlugin]
       });
