--- a/plugins/table-merged-cell/demo/viewer.html
+++ b/plugins/table-merged-cell/demo/viewer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Viewer</title>
     <!-- Editor -->
-    <link rel="stylesheet" href="http://localhost:8080/dist/toastui-editor-contents.css" />
+    <link rel="stylesheet" href="http://localhost:8080/dist/toastui-editor-viewer.css" />
   </head>
   <body>
     <div class="code-html">
@@ -15,7 +15,7 @@
     <!-- Plugin -->
     <script src="../dist/cdn/toastui-editor-plugin-table-merged-cell.js"></script>
     <script class="code-js">
-      var content = ['| @cols=2:merged |', '| --- | --- |', '| table | table |'].join('\n');
+      var content = ['| @cols=2:merged | |', '| --- | --- |', '| table | table2 |'].join('\n');
 
       var Viewer = toastui.Editor;
 
