--- a/plugins/table-merged-cell/demo/editor.html
+++ b/plugins/table-merged-cell/demo/editor.html
@@ -25,26 +25,26 @@
     <!-- Plugin -->
     <script src="../dist/cdn/toastui-editor-plugin-table-merged-cell.js"></script>
     <script class="code-js">
-      var content = ['| @cols=2:merged | |', '| --- | --- |', '| table | table2 |'].join('\n');
+      const content = ['| @cols=2:merged | |', '| --- | --- |', '| table | table2 |'].join('\n');
 
-      var Editor = toastui.Editor;
-      var tableMergedCellPlugin = Editor.plugin.tableMergedCell;
+      const { Editor } = toastui;
+      const { tableMergedCell } = Editor.plugin;
 
-      var editor = new Editor({
+      const editor = new Editor({
         el: document.querySelector('#editor'),
         previewStyle: 'vertical',
         height: '500px',
         initialEditType: 'wysiwyg',
         initialValue: content,
-        plugins: [tableMergedCellPlugin]
+        plugins: [tableMergedCell]
       });
 
-      var viewer = Editor.factory({
+      const viewer = Editor.factory({
         el: document.querySelector('#viewer'),
         viewer: true,
         height: '500px',
         initialValue: content,
-        plugins: [tableMergedCellPlugin]
+        plugins: [tableMergedCell]
       });
     </script>
   </body>
