--- a/apps/editor/examples/example07-viewer-with-chart-plugin.html
+++ b/apps/editor/examples/example07-viewer-with-chart-plugin.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="https://uicdn.toast.com/tui.chart/v3.7.0/tui-chart.css" />
   </head>
   <body>
-    <div class="code-html contents">
-      <!-- Viewer -->
+    <div class="tui-doc-description">
+    </div>
+    <div class="code-html tui-doc-contents">
       <div id="viewer"></div>
     </div>
     <!-- Added to check demo page in Internet Explorer -->
@@ -30,7 +31,17 @@
         previewStyle: 'vertical',
         height: '500px',
         initialValue: chartContent,
-        plugins: [chart]
+        plugins: [
+          [
+            chart,
+            {
+              minWidth: 100,
+              maxWidth: 600,
+              minHeight: 100,
+              maxHeight: 300
+            }
+          ]
+        ]
       });
     </script>
   </body>
