--- a/apps/editor/examples/example09-viewer-with-color-syntax-highlight-plugin.html
+++ b/apps/editor/examples/example09-viewer-with-color-syntax-highlight-plugin.html
@@ -13,8 +13,9 @@
     />
   </head>
   <body>
-    <div class="code-html contents">
-      <!-- Viewer -->
+    <div class="tui-doc-description">
+    </div>
+    <div class="code-html tui-doc-contents">
       <div id="viewer"></div>
     </div>
     <!-- Added to check demo page in Internet Explorer -->
