--- a/apps/editor/examples/example08-editor-with-code-syntax-highlight-plugin.html
+++ b/apps/editor/examples/example08-editor-with-code-syntax-highlight-plugin.html
@@ -18,7 +18,8 @@
     />
   </head>
   <body>
-    <div class="code-html contents">
+    <div class="tui-doc-description"></div>
+    <div class="code-html tui-doc-contents">
       <!-- Editor -->
       <h2>Editor</h2>
       <div id="editor"></div>
@@ -32,7 +33,7 @@
     <!-- Editor -->
     <script src="../dist/toastui-editor-all.js"></script>
     <!-- Editor's Plugin -->
-    <script src="http://localhost:8081/dist/cdn/toastui-editor-plugin-code-syntax-highlight-all.js"></script>
+    <script src="http://localhost:8082/dist/cdn/toastui-editor-plugin-code-syntax-highlight-all.js"></script>
     <script type="text/babel" class="code-js">
       const { Editor } = toastui;
       const { codeSyntaxHighlight } = Editor.plugin;
