--- a/apps/editor/examples/example14-viewer-with-uml-plugin.html
+++ b/apps/editor/examples/example14-viewer-with-uml-plugin.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="../dist/toastui-editor-viewer.css" />
   </head>
   <body>
-    <div class="code-html contents">
-      <!-- Viewer -->
+    <div class="tui-doc-description">
+    </div>
+    <div class="code-html tui-doc-contents">
       <div id="viewer"></div>
     </div>
     <!-- Added to check demo page in Internet Explorer -->
