--- a/apps/editor/examples/example21-placeholder.html
+++ b/apps/editor/examples/example21-placeholder.html
@@ -2,7 +2,7 @@
 <html>
   <head lang="en">
     <meta charset="UTF-8" />
-    <title>1. Editor</title>
+    <title>21. Placeholder</title>
     <link rel="stylesheet" href="./css/tuidoc-example-style.css" />
     <!-- Editor's Dependencies -->
     <link
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="../dist/toastui-editor.css" />
   </head>
   <body>
-    <div class="tui-doc-description"></div>
     <div class="code-html tui-doc-contents">
       <div id="editor"></div>
     </div>
@@ -27,7 +26,7 @@
         el: document.querySelector('#editor'),
         previewStyle: 'vertical',
         height: '500px',
-        initialValue: content
+        placeholder: 'Please enter text.'
       });
     </script>
   </body>
