--- a/plugins/chart/demo/editor.html
+++ b/plugins/chart/demo/editor.html
@@ -29,7 +29,7 @@
     <script class="code-js">
       const content = [
         '```chart',
-        'category1,category2',
+        ',category1,category2',
         'Jan,21,23',
         'Feb,31,17',
         '',
@@ -51,7 +51,15 @@
         previewStyle: 'vertical',
         height: '500px',
         initialValue: content,
-        plugins: [chart]
+        plugins: [
+          chart,
+          {
+            minWidth: 100,
+            maxWidth: 600,
+            minHeight: 100,
+            maxHeight: 300
+          }
+        ]
       });
 
       const viewer = Editor.factory({
@@ -59,7 +67,15 @@
         viewer: true,
         height: '500px',
         initialValue: content,
-        plugins: [chart]
+        plugins: [
+          chart,
+          {
+            minWidth: 100,
+            maxWidth: 600,
+            minHeight: 100,
+            maxHeight: 300
+          }
+        ]
       });
     </script>
   </body>
