feat: apply code review

--- a/plugins/chart/demo/viewer.html
+++ b/plugins/chart/demo/viewer.html
@@ -36,20 +36,19 @@
       const Viewer = toastui.Editor;
       const { chart } = Viewer.plugin;
 
-      const instance = new Viewer({
+      const chartOptions = {
+        minWidth: 100,
+        maxWidth: 600,
+        minHeight: 100,
+        maxHeight: 300
+      };
+
+      const viewer = new Viewer({
         el: document.querySelector('#viewer'),
         previewStyle: 'vertical',
         height: '500px',
         initialValue: content,
-        plugins: [
-          chart,
-          {
-            minWidth: 100,
-            maxWidth: 600,
-            minHeight: 100,
-            maxHeight: 300
-          }
-        ]
+        plugins: [chart, chartOptions]
       });
     </script>
   </body>
