--- a/plugins/chart/demo/editor.html
+++ b/plugins/chart/demo/editor.html
@@ -46,20 +46,19 @@
       const { Editor } = toastui;
       const { chart } = Editor.plugin;
 
+      const chartOptions = {
+        minWidth: 100,
+        maxWidth: 600,
+        minHeight: 100,
+        maxHeight: 300
+      };
+
       const editor = new Editor({
         el: document.querySelector('#editor'),
         previewStyle: 'vertical',
         height: '500px',
         initialValue: content,
-        plugins: [
-          chart,
-          {
-            minWidth: 100,
-            maxWidth: 600,
-            minHeight: 100,
-            maxHeight: 300
-          }
-        ]
+        plugins: [chart, chartOptions]
       });
 
       const viewer = Editor.factory({
@@ -67,15 +66,7 @@
         viewer: true,
         height: '500px',
         initialValue: content,
-        plugins: [
-          chart,
-          {
-            minWidth: 100,
-            maxWidth: 600,
-            minHeight: 100,
-            maxHeight: 300
-          }
-        ]
+        plugins: [chart, chartOptions]
       });
     </script>
   </body>
