feat: apply code review

--- a/apps/editor/examples/example03-editor-with-wysiwyg-mode.html
+++ b/apps/editor/examples/example03-editor-with-wysiwyg-mode.html
@@ -23,7 +23,7 @@
     <!-- Editor -->
     <script src="../dist/toastui-editor-all.js"></script>
     <script type="text/babel" class="code-js">
-      const instance = new toastui.Editor({
+      const editor = new toastui.Editor({
         el: document.querySelector('#editor'),
         height: '500px',
         initialValue: content,
