--- a/apps/editor/examples/example07-viewer-with-chart-plugin.html
+++ b/apps/editor/examples/example07-viewer-with-chart-plugin.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="https://uicdn.toast.com/tui.chart/v3.7.0/tui-chart.css" />
   </head>
   <body>
-    <div class="tui-doc-description">
-    </div>
+    <div class="tui-doc-description"></div>
     <div class="code-html tui-doc-contents">
       <div id="viewer"></div>
     </div>
@@ -26,22 +25,19 @@
       const Viewer = toastui.Editor;
       const { chart } = Viewer.plugin;
 
-      const instance = new Viewer({
+      const chartOptions = {
+        minWidth: 100,
+        maxWidth: 600,
+        minHeight: 100,
+        maxHeight: 300
+      };
+
+      const viewer = new Viewer({
         el: document.querySelector('#viewer'),
         previewStyle: 'vertical',
         height: '500px',
         initialValue: chartContent,
-        plugins: [
-          [
-            chart,
-            {
-              minWidth: 100,
-              maxWidth: 600,
-              minHeight: 100,
-              maxHeight: 300
-            }
-          ]
-        ]
+        plugins: [[chart, chartOptions]]
       });
     </script>
   </body>
