--- a/apps/editor/examples/example17-create-plugin.html
+++ b/apps/editor/examples/example17-create-plugin.html
@@ -47,7 +47,7 @@
 
       const content = ['```youtube', 'XyenY12fzAk', '```'].join('\n');
 
-      const instance = new Editor({
+      const editor = new Editor({
         el: document.querySelector('#editor'),
         previewStyle: 'vertical',
         height: '500px',
