--- a/apps/editor/examples/example20-i18n.html
+++ b/apps/editor/examples/example20-i18n.html
@@ -23,7 +23,7 @@
     <script src="../dist/toastui-editor-all.js"></script>
     <script src="../dist/i18n/ko-kr.js"></script>
     <script type="text/babel" class="code-js">
-      const instance = new toastui.Editor({
+      const editor = new toastui.Editor({
         el: document.querySelector('#editor'),
         previewStyle: 'vertical',
         height: '500px',
