--- a/apps/editor/examples/example02-editor-with-horizontal-preview.html
+++ b/apps/editor/examples/example02-editor-with-horizontal-preview.html
@@ -23,7 +23,7 @@
     <!-- Editor -->
     <script src="../dist/toastui-editor-all.js"></script>
     <script type="text/babel" class="code-js">
-      const instance = new toastui.Editor({
+      const editor = new toastui.Editor({
         el: document.querySelector('#editor'),
         previewStyle: 'horizontal',
         height: '500px',
