--- a/apps/editor/examples/example04-viewer.html
+++ b/apps/editor/examples/example04-viewer.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="../dist/toastui-editor-viewer.css" />
   </head>
   <body>
-    <div class="tui-doc-description">
-    </div>
+    <div class="tui-doc-description"></div>
     <div class="code-html tui-doc-contents">
       <div id="viewer"></div>
     </div>
@@ -19,7 +18,7 @@
     <!-- Viewer -->
     <script src="../dist/toastui-editor-viewer.js"></script>
     <script type="text/babel" class="code-js">
-      const instance = new toastui.Editor({
+      const viewer = new toastui.Editor({
         el: document.querySelector('#viewer'),
         height: '500px',
         initialValue: content
