--- a/apps/editor/examples/example05-viewer-using-editor-factory.html
+++ b/apps/editor/examples/example05-viewer-using-editor-factory.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="../dist/toastui-editor-viewer.css" />
   </head>
   <body>
-    <div class="tui-doc-description">
-    </div>
+    <div class="tui-doc-description"></div>
     <div class="code-html tui-doc-contents">
       <div id="viewer"></div>
     </div>
@@ -19,7 +18,7 @@
     <!-- Editor -->
     <script src="../dist/toastui-editor-all.js"></script>
     <script type="text/babel" class="code-js">
-      const instance = toastui.Editor.factory({
+      const viewer = toastui.Editor.factory({
         el: document.querySelector('#viewer'),
         viewer: true,
         height: '500px',
