--- a/apps/editor/examples/example06-editor-with-chart-plugin.html
+++ b/apps/editor/examples/example06-editor-with-chart-plugin.html
@@ -15,8 +15,7 @@
     <link rel="stylesheet" href="https://uicdn.toast.com/tui.chart/v3.7.0/tui-chart.css" />
   </head>
   <body>
-    <div class="tui-doc-description">
-    </div>
+    <div class="tui-doc-description"></div>
     <div class="code-html tui-doc-contents">
       <!-- Editor -->
       <h2>Editor</h2>
@@ -36,12 +35,19 @@
       const { Editor } = toastui;
       const { chart } = Editor.plugin;
 
+      const chartOptions = {
+        minWidth: 100,
+        maxWidth: 600,
+        minHeight: 100,
+        maxHeight: 300
+      };
+
       const editor = new Editor({
         el: document.querySelector('#editor'),
         previewStyle: 'vertical',
-        height: '5000px',
+        height: '500px',
         initialValue: chartContent,
-        plugins: [chart]
+        plugins: [chart, chartOptions]
       });
 
       const viewer = Editor.factory({
@@ -49,17 +55,7 @@
         viewer: true,
         height: '500px',
         initialValue: chartContent,
-        plugins: [
-          [
-            chart,
-            {
-              minWidth: 100,
-              maxWidth: 600,
-              minHeight: 100,
-              maxHeight: 300
-            }
-          ]
-        ]
+        plugins: [[chart, chartOptions]]
       });
     </script>
   </body>
