--- a/apps/editor/examples/example09-viewer-with-color-syntax-highlight-plugin.html
+++ b/apps/editor/examples/example09-viewer-with-color-syntax-highlight-plugin.html
@@ -13,8 +13,7 @@
     />
   </head>
   <body>
-    <div class="tui-doc-description">
-    </div>
+    <div class="tui-doc-description"></div>
     <div class="code-html tui-doc-contents">
       <div id="viewer"></div>
     </div>
@@ -29,7 +28,7 @@
       const Viewer = toastui.Editor;
       const { codeSyntaxHighlight } = Viewer.plugin;
 
-      const instance = new Viewer({
+      const viewer = new Viewer({
         el: document.querySelector('#viewer'),
         previewStyle: 'vertical',
         height: '500px',
