--- a/apps/editor/examples/example10-editor-with-color-syntax-plugin.html
+++ b/apps/editor/examples/example10-editor-with-color-syntax-plugin.html
@@ -33,7 +33,7 @@
       const { Editor } = toastui;
       const { colorSyntax } = Editor.plugin;
 
-      const instance = new Editor({
+      const editor = new Editor({
         el: document.querySelector('#editor'),
         previewStyle: 'vertical',
         height: '500px',
