--- a/apps/editor/examples/example16-viewer-with-all-plugins.html
+++ b/apps/editor/examples/example16-viewer-with-all-plugins.html
@@ -18,8 +18,7 @@
     />
   </head>
   <body>
-    <div class="tui-doc-description">
-    </div>
+    <div class="tui-doc-description"></div>
     <div class="code-html tui-doc-contents">
       <div id="viewer"></div>
     </div>
@@ -38,7 +37,7 @@
       const Viewer = toastui.Editor;
       const { chart, codeSyntaxHighlight, colorSyntax, tableMergedCell, uml } = Viewer.plugin;
 
-      const instance = new Viewer({
+      const viewer = new Viewer({
         el: document.querySelector('#viewer'),
         previewStyle: 'vertical',
         height: '500px',
