--- a/apps/editor/examples/example18-use-command.html
+++ b/apps/editor/examples/example18-use-command.html
@@ -23,7 +23,7 @@
     <!-- Editor -->
     <script src="../dist/toastui-editor-all.js"></script>
     <script type="text/babel" class="code-js">
-      const instance = new toastui.Editor({
+      const editor = new toastui.Editor({
         el: document.querySelector('#editor'),
         previewStyle: 'vertical',
         height: '500px',
@@ -31,7 +31,7 @@
       });
 
       document.getElementById('btn').addEventListener('click', () => {
-        instance.exec('Bold');
+        editor.exec('Bold');
       });
     </script>
   </body>
