chore: change examples file name

--- a/apps/editor/examples/example17-creating-plugin.html
+++ b/apps/editor/examples/example17-creating-plugin.html
@@ -2,7 +2,7 @@
 <html>
   <head lang="en">
     <meta charset="UTF-8" />
-    <title>17. Create Plugin</title>
+    <title>17. Creating Plugin</title>
     <link rel="stylesheet" href="./css/tuidoc-example-style.css" />
     <!-- Editor's Dependencies -->
     <link
