--- a/apps/editor/examples/example18-using-command.html
+++ b/apps/editor/examples/example18-using-command.html
@@ -2,7 +2,7 @@
 <html>
   <head lang="en">
     <meta charset="UTF-8" />
-    <title>18. Use Command</title>
+    <title>18. Using Command</title>
     <link rel="stylesheet" href="./css/tuidoc-example-style.css" />
     <!-- Editor's Dependencies -->
     <link
