--- a/apps/editor/examples/example19-customizing-toolbar-buttons.html
+++ b/apps/editor/examples/example19-customizing-toolbar-buttons.html
@@ -2,7 +2,7 @@
 <html>
   <head lang="en">
     <meta charset="UTF-8" />
-    <title>19. Customize Toolbar Buttons</title>
+    <title>19. Customizing Toolbar Buttons</title>
     <link rel="stylesheet" href="./css/tuidoc-example-style.css" />
     <!-- Editor's Dependencies -->
     <link
