--- a/apps/editor/test/demo/editor.html
+++ b/apps/editor/test/demo/editor.html
@@ -10,6 +10,19 @@
     <script type="module">
       import { Editor } from '/dist/index.js';
 
+      const convertors = {
+        latex(node) {
+          // const generator = new latexjs.HtmlGenerator({ hyphenate: false });
+          // const { body } = latexjs.parse(node.literal, { generator }).htmlDocument();
+
+          return [
+            { type: 'openTag', tagName: 'div', outerNewLine: true },
+            { type: 'html', content: 'daf' },
+            { type: 'closeTag', tagName: 'div', outerNewLine: true },
+          ];
+        },
+      };
+
       const editor = new Editor({
         el: document.querySelector('#editor'),
         previewStyle: 'vertical',
@@ -18,6 +31,7 @@
         useCommandShortcut: true,
         extendedAutolinks: true,
         frontMatter: true,
+        customHTMLRenderer: convertors,
       });
 
       window.editor = editor;
