--- a/plugins/code-syntax-highlight/demo/editor.html
+++ b/plugins/code-syntax-highlight/demo/editor.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/github.min.css"
     />
+    <link rel="stylesheet" href="../dist/toastui-editor-plugin-code-syntax-highlight.css" />
   </head>
   <body>
     <div class="code-html">
@@ -48,27 +49,41 @@
         '```',
         '```clojure',
         '[1 2 3]',
-        '```'
+        '```',
       ].join('\n');
 
-      const { Editor } = toastui;
-      const { codeSyntaxHighlight } = Editor.plugin;
+      const { Editor, plugin } = toastui.editor;
+      const { codeSyntaxHighlight } = plugin;
+
+      const convertors = {
+        latex(node) {
+          // const generator = new latexjs.HtmlGenerator({ hyphenate: false });
+          // const { body } = latexjs.parse(node.literal, { generator }).htmlDocument();
+
+          return [
+            { type: 'openTag', tagName: 'div', outerNewLine: true },
+            { type: 'html', content: 'daf' },
+            { type: 'closeTag', tagName: 'div', outerNewLine: true },
+          ];
+        },
+      };
 
       const editor = new Editor({
         el: document.querySelector('#editor'),
         previewStyle: 'vertical',
         height: '500px',
         initialValue: content,
-        plugins: [codeSyntaxHighlight]
+        plugins: [codeSyntaxHighlight],
+        customHTMLRenderer: convertors,
       });
 
-      const viewer = Editor.factory({
-        el: document.querySelector('#viewer'),
-        viewer: true,
-        height: '500px',
-        initialValue: content,
-        plugins: [codeSyntaxHighlight]
-      });
+      // const viewer = Editor.factory({
+      //   el: document.querySelector('#viewer'),
+      //   viewer: true,
+      //   height: '500px',
+      //   initialValue: content,
+      //   plugins: [codeSyntaxHighlight],
+      // });
     </script>
   </body>
 </html>
