--- a/plugins/code-syntax-highlight/esm/index.html
+++ b/plugins/code-syntax-highlight/esm/index.html
@@ -3,6 +3,11 @@
   <head lang="en">
     <meta charset="UTF-8" />
     <title>Demo</title>
+    <!-- Plugin -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/github.min.css"
+    />
   </head>
   <body>
     <div id="editor"></div>
@@ -15,18 +20,22 @@
         '```js',
         `console.log('foo')`,
         '```',
+        '',
         '```javascript',
         `console.log('bar')`,
         '```',
+        '',
         '```html',
         '<div id="editor"><span>baz</span></div>',
         '```',
+        '',
         '```wrong',
         '[1 2 3]',
         '```',
+        '',
         '```clojure',
         '[1 2 3]',
-        '```'
+        '```',
       ].join('\n');
 
       const editor = new Editor({
@@ -34,7 +43,7 @@
         previewStyle: 'vertical',
         height: '500px',
         initialValue: content,
-        plugins: [codeSyntaxHighlightPlugin]
+        plugins: [codeSyntaxHighlightPlugin],
       });
 
       window.editor = editor;
