--- a/plugins/code-syntax-highlight/demo/editor.html
+++ b/plugins/code-syntax-highlight/demo/editor.html
@@ -48,7 +48,7 @@
         '```',
         '```clojure',
         '[1 2 3]',
-        '```'
+        '```',
       ].join('\n');
 
       const { Editor } = toastui;
@@ -59,7 +59,7 @@
         previewStyle: 'vertical',
         height: '500px',
         initialValue: content,
-        plugins: [codeSyntaxHighlight]
+        plugins: [codeSyntaxHighlight],
       });
 
       const viewer = Editor.factory({
@@ -67,7 +67,7 @@
         viewer: true,
         height: '500px',
         initialValue: content,
-        plugins: [codeSyntaxHighlight]
+        plugins: [codeSyntaxHighlight],
       });
     </script>
   </body>
