feat: change logic to register highlighting language

--- a/plugins/code-syntax-highlight/demo-esm/index.html
+++ b/plugins/code-syntax-highlight/demo-esm/index.html
@@ -16,16 +16,13 @@
       import { Editor } from 'http://localhost:8080/dist/index.js';
       import codeSyntaxHighlightPlugin from '/dist/index.js';
 
-      import hljs from 'highlight.js';
+      // import hljs from 'highlight.js';
 
       // @description import only the languages ​​to use
-      // import hljs from 'highlight.js/lib/core';
+      import hljs from 'highlight.js/lib/highlight';
 
-      // import javascript from 'highlight.js/lib/languages/javascript';
-      // import clojure from 'highlight.js/lib/languages/clojure';
-
-      // hljs.registerLanguage('javascript', javascript);
-      // hljs.registerLanguage('clojure', clojure);
+      import javascript from 'highlight.js/lib/languages/javascript';
+      import clojure from 'highlight.js/lib/languages/clojure';
 
       const content = [
         '```js',
@@ -54,7 +51,15 @@
         previewStyle: 'vertical',
         height: '500px',
         initialValue: content,
-        plugins: [[codeSyntaxHighlightPlugin, { hljs }]],
+        plugins: [
+          [
+            codeSyntaxHighlightPlugin,
+            {
+              hljs,
+              languages: [javascript, clojure],
+            },
+          ],
+        ],
       });
 
       window.editor = editor;
