feat: add toMarkdownRenderers to plugin

--- a/apps/editor/test/demo/editor.html
+++ b/apps/editor/test/demo/editor.html
@@ -64,6 +64,19 @@
               };
             },
           },
+          toMarkdownRenderers: {
+            heading({ node }, { origin }) {
+              const { level, headingType } = node.attrs;
+
+              if (headingType === 'setext') {
+                const delim = level === 1 ? '========' : '------';
+
+                return { delim };
+              }
+
+              return origin();
+            },
+          },
         };
       }
 
