--- a/plugins/code-syntax-highlight/demo/editor.html
+++ b/plugins/code-syntax-highlight/demo/editor.html
@@ -26,8 +26,8 @@
       <div id="viewer"></div>
     </div>
     <!-- highlight.js Languages -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/languages/clojure.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.6.0/highlight.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/languages/clojure.min.js"></script> -->
     <!-- Editor -->
     <script src="http://localhost:8080/dist/cdn/toastui-editor-all.js"></script>
     <!-- Plugin -->
@@ -54,21 +54,23 @@
       const { Editor } = toastui;
       const { codeSyntaxHighlight } = Editor.plugin;
 
+      console.log(hljs);
+
       const editor = new Editor({
         el: document.querySelector('#editor'),
         previewStyle: 'vertical',
         height: '500px',
         initialValue: content,
-        plugins: [codeSyntaxHighlight],
+        plugins: [[codeSyntaxHighlight, { hljs }]],
       });
 
-      const viewer = Editor.factory({
-        el: document.querySelector('#viewer'),
-        viewer: true,
-        height: '500px',
-        initialValue: content,
-        plugins: [codeSyntaxHighlight],
-      });
+      // const viewer = Editor.factory({
+      //   el: document.querySelector('#viewer'),
+      //   viewer: true,
+      //   height: '500px',
+      //   initialValue: content,
+      //   plugins: [codeSyntaxHighlight],
+      // });
     </script>
   </body>
 </html>
