--- a/plugins/code-syntax-highlight/demo/editor.html
+++ b/plugins/code-syntax-highlight/demo/editor.html
@@ -59,7 +59,7 @@
         previewStyle: 'vertical',
         height: '500px',
         initialValue: content,
-        plugins: [codeSyntaxHighlight],
+        plugins: [[codeSyntaxHighlight, { hljs }]],
       });
 
       const viewer = Editor.factory({
@@ -67,7 +67,7 @@
         viewer: true,
         height: '500px',
         initialValue: content,
-        plugins: [codeSyntaxHighlight],
+        plugins: [[codeSyntaxHighlight, { hljs }]],
       });
     </script>
   </body>
