feat: apply code review-1

--- a/plugins/code-syntax-highlight/demo-esm/index.html
+++ b/plugins/code-syntax-highlight/demo-esm/index.html
@@ -2,7 +2,7 @@
 <html>
   <head lang="en">
     <meta charset="UTF-8" />
-    <title>Demo</title>
+    <title>Test to use plugin in node environment</title>
     <!-- Plugin -->
     <link
       rel="stylesheet"
